Updated dependencies and fixed two compiler warnings